--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,13 @@
-<!-- res/values/colors.xml -->
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Existing colors -->
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <!-- New colors from AppColors -->
+    <color name="whisper_background">#F4EFF3</color>
+    <color name="button_login">#FC6B68</color>
 
     <!-- Màu sử dụng trong Login -->
     <color name="buttonLogin">#FF5722</color>
@@ -16,11 +21,8 @@
     <color name="googleGray">#7D7D7D</color>
 
     <color name="bg">#F4EFF3</color>
-    <color name="white">#FFFFFF</color>
     <color name="blue">#2196F3</color>
-    <color name="primary">#2196F3</color>
     <color name="dark_gray">#424242</color>
-    <color name="black">#000000</color>
     <color name="button">#FC6B68</color>
     <color name="fb">#4167B2</color>
     <color name="tab_background">#F2F3F7</color>
@@ -28,4 +30,12 @@
     <color name="grey_600">#666666</color>
     <color name="grey_300">#E0E0E0</color>
     <color name="grey_100">#F5F5F5</color>
+
+    <color name="primary">#1A73E8</color>
+    <color name="primary_dark">#0D47A1</color>
+    <color name="accent">#03DAC5</color>
+    <color name="black">#FF000000</color>
+    <color name="white">#FFFFFFFF</color>
+    <color name="gray">#757575</color>
+    <color name="light_gray">#F5F5F5</color>
 </resources>
